<resources>
    <string name="app_name">Lit Moments</string>
    <string name="Sign_in">CONNECT WITH GOOGLE</string>
    <string name="add_journal_entry">Add Journal Entry</string>
    <string name="add_entry">Add Entry</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="save_journal_entry">Save Journal Entry</string>
    <string name="loading">Loading...</string>
    <string name="dumy">Dumy</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="adsview">Adsview</string>
    <string name="splash">Splash Image</string>
    <string name="listimage"> Journal Image</string>
    <!-- <string name="default_web_client_id">1076030565733-aibaiu84sv5vsv54qpj6cjpo9svqtbdl.apps.googleusercontent.com</string>-->
   <string name="web_client_id">1081776894517-jp3a52h43pukeubn389gej0l8o3pnfid.apps.googleusercontent.com</string>

    <string name="journalDate">Date</string>
    <string name="journalLocation">Location</string>
    <string name="journalWeather">Weather</string>
    <string name="journalMood">Mood</string>
    <string name="journalTitle">Title</string>
    <string name="journalMessage">Message</string>
    <string name="journalPhoto">Photo</string>
    <string name="uiTheme">Appliacation Theme</string>
    <string name="uiThemeFont">Font Family</string>
    <string name="key_uiTheme">key_uiTheme</string>
    <string name="summary_uiTheme">Lit Theme</string>
    <string name="title_uiTheme">Theme</string>
    <string name="key_uiThemeFont">key_uiThemeFont</string>
    <string name="summary_uiThemeFont">Lit Font</string>
    <string name="title_uiThemeFont">Font</string>
    <string name="title_removeAds">Buy Premium</string>
    <string name="title_darkTheme">Dark Theme</string>
    <string name="key_userAccount">key_userAccount</string>
    <string name="key_tellafriend">key_tellafriend</string>
    <string name="key_feedback">key_feedback</string>
    <string name="key_rateus">key_rateus</string>
    <string name="key_removeAds">key_removeAds</string>
    <string name="key_darkTheme">key_darkTheme</string>
    <string name="key_termsofuse">key_termsofuse</string>
    <string name="key_privacy">key_privacy</string>
    <string name="key_about">key_about</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">Lit Momentos is your newest travel companion. Capture and share your travel experiences with family and friends!!!</string>
    <string name="app_version">1.0</string>
    <string name="app_versionsplash">v1.0</string>
    <string name="title_version">Version</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Hint</string>
    <string name="action_share">Share</string>
    <string name="acc_info">Account Info</string>
    <string name="acc_logout">Sign Out</string>
    <string name="edit_journal">Edit</string>
    <string name="delete_journal">Delete</string>
    <string name="save_journal">Save</string>
    <string name="photo_journal">Image</string>
    <string name="group_title">Photo Size</string>
    <string name="intro_slidertitle">Capture Special Moments </string>
    <string name="intro_slider2title">Share Your Moments </string>
    <string name="intro_slider3title">Realtime Dashboard </string>
    <string name="intro_slider">Create and edit your travel experiences easily with our simplified user interface.</string>
    <string name="intro_slider2">Share your precious travel moments with your loved ones and friends with a single click.</string>
    <string name="intro_slider3">Get Informative Insights and track your Lit moments with our easy-to-use dashboard.</string>
    <string name="label_delete_journal">Delete Entry?</string>
    <string name="description_delete_journal">Are you sure you want to delete this entry?</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="subscription_title">Lit Moments Premium Plan</string>
    <string name="monthly"> Monthly</string>
    <string name="yearly"> Yearly </string>
    <string name="monthlySubscription">Buy Monthly Premium</string>
    <string name="yearlySubscription">Buy Yearly Premium</string>
    <string name="subscriberbenefits">Premium benefits:</string>
    <string name="noAds">Ad free experience</string>
    <string name="allThemes">Get all Color themes</string>
    <string name="litboard">Access to all Lit board features</string>
    <string name="reminders">Timely reminders</string>
    <string name="moods">More Lit moods</string>
    <string name="buyPremium">Buy Premium</string>
    <string name="account">Account</string>
    <string name="dashtoolbar">LitBoard</string>
    <string name="piechartMood">Lit Mood Stats</string>
    <string name="barchartTitle">Lit Moments Stats</string>
    <string name="TreechartTitle">Favorite Places</string>
    <string name="tellafriend">Tell a Friend</string>
    <string name="feedback">Feedback</string>
    <string name="rateus">Rate us on Playstore</string>
    <string name="privacy">Privacy</string>
    <string name="termsofuse">Terms of use</string>
    <string name="about">About</string>
    <string name="ic_journal">Journal Image</string>
    <string name="about_version">Version 1.0</string>
    <string name="about_lit">Travel Journal</string>
    <string name="about_litdev">Designed and developed by Allan Gisoni</string>
    <string name="no_items">No Journals Added</string>

    <string name="privacy_policy"> Privacy Policy</string>
    <string name="pripolicy_content"> Integrity and transparency is at the center of everything we do. Your privacy is important to us and we want to make it easy for you to comprehend your data settings.
        Do not hesitate to reach out to us at allangisoni@gmail.com if you have any question.</string>
    <string name="info_collection">Collection of information and use</string>
    <string name="info_content">We automatically collect user personal info such as email or any other identity for login purpose and  identify user uniquely on Lit Moments app.
        All data generated by users within the app  is stored safely and securely at our data servers and is NOT shared with any other users.</string>
    <string name="analytics">Lit Analytics</string>
    <string name="analytics_content">If you have agreed to data collection, this application collects some usage data that are critical for us to deliver our services,
        to understand your needs and to improve our services. </string>
    <string name="change_policy">Changes to this privacy policy</string>
    <string name="change_policycontent">Lit Moments reserves the right to make changes to this privacy policy at any time by giving notice to its users on this page.
        It is strongly recommended to check this page often. If a User objects to any of the changes to the Policy,
        the User must cease using this Application and can request that Lit Moments remove the Personal Data.
        Unless stated otherwise, the then-current privacy policy applies to all Personal Data the Data Controller has about users.</string>
    <string name="reach_out">Reach out to us</string>
    <string name="reachout_content">If you have any questions regarding privacy while using the app, or have questions about our practices, please feel free to contact us via email at Allangisoni@gmail.com.</string>
    <string name="lastupdated">Last updated July 31 2019</string>

    <string name="termscontent">You are advised to please read these terms of use carefully before using Lit Moments application for mobile phones.
        These terms apply to all users and others who use the application. By installing and using the application, you agree to be bound by these terms.
        If you disagree or do not accept the terms then you may not install or use the application. Your use of the Lit Moments application is subject to the terms and conditions
        set forth in this End-User License Agreement (EULA);</string>
    <string name="termsconditions_liability">1. Liability: In no event will the owner be liable for anything that may arise from the use of this application.</string>
    <string name="termsconditions_limiteduse">2. Restriction of use: You agree that you shall not in any circumstance make or distribute copies of this application or transfer this application from one device to another.
        Moreover, you shall not decompile, reverse engineer, disassemble, include in other application, or translate the application,or use the application for any commercial purposes unless with authorization from the owner.</string>
    <string name="termsconditions_licence"> 3. Licence: This application is being licensed to you and you hereby acknowledge that no title or ownership in the application  being transferred or assigned and this EULA is not to be construed as a sale of any rights in the application.</string>
    <string name="termsconditions_warranty">4. Warranty: This application is provided "AS IS", without warranty of any kind. We disclaim and make no express or implied warranties and specifically disclaim the warranties of merchantability, fitness for a particular purpose and non-infringement of third-party rights.</string>
    <string name="termsconditions_adverts">5. Redirects to other sites: This application may contain links to other third-party sites or services that we do not own or control. We assume no responsibility for, the content, privacy policies, or practices of any third party sites or services. You further acknowledge and agree that we shall not be responsible or liable, directly or indirectly,
        for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such sites or services. </string>
    <string name="termsconditions_termination">6. Termination: At any given time we may decide to terminate or suspend access to our service immediately, without prior notice or liability,
        for any reason whatsoever, including without limitation if you breach the EULA</string>
    <string name="termsconditions_change">7. Changes: We reserve the right, at our sole discretion, to modify or replace these terms at any time with or without notice. Please keep checking this page from time to time and take note of any changes.</string>
    <string name="termsconditions_support">If you have any questions regarding this EULA, or have questions about our practices, please feel free to contact us via email at allangisoni@gmail.com.</string>

</resources>
