<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:layout="@layout/settings_toolbar"></PreferenceCategory>

    <com.example.android.litmoments.Settings.MyPreferenceCategory
        android:title="Customization">

    <ListPreference
        android:defaultValue="2"
        android:dialogTitle="@string/uiTheme"
        android:entries="@array/pref_upload_theme_entries"
        android:entryValues="@array/pref_upload_theme_values"
        android:key="@string/key_uiTheme"
        android:summary="%s"
        android:title="@string/title_uiTheme" />


    <ListPreference
        android:defaultValue="0"
        android:dialogTitle="@string/uiThemeFont"
        android:entries="@array/pref_upload_font_entries"
        android:entryValues="@array/pref_upload_font_values"
        android:key="@string/key_uiThemeFont"
        android:summary="%s"
        android:title="@string/title_uiThemeFont" />

    </com.example.android.litmoments.Settings.MyPreferenceCategory>

<com.example.android.litmoments.Settings.MyPreferenceCategory
    android:title="Help &amp; support">

    <Preference
        android:selectable="false"
        android:title="About"
        android:summary="@string/summary_about" />

    <Preference
        android:title="@string/title_version"
        android:summary="@string/app_version"
        />

</com.example.android.litmoments.Settings.MyPreferenceCategory >

 <com.example.android.litmoments.Settings.MyPreferenceCategory
     android:title="Account">

     <Preference
         android:title="@string/acc_logout"
         android:selectable="true"
         android:key="@string/key_userAccount"
         >

     </Preference>

 </com.example.android.litmoments.Settings.MyPreferenceCategory>

</PreferenceScreen>