<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lit.litmoments.TermsActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <include
            android:id="@+id/entrytoolbar"
            layout="@layout/privacytoolbar" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_below="@id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/tv_terms"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/termsofuse"/>

    <TextView
        android:id="@+id/tv_terms1"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/termscontent"/>

        <TextView
            android:id="@+id/tv_terms2"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termsconditions_liability"/>

        <TextView
            android:id="@+id/tv_terms3"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termsconditions_limiteduse"/>


        <TextView
            android:id="@+id/tv_terms4"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termsconditions_licence"/>


        <TextView
            android:id="@+id/tv_terms5"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termsconditions_warranty"/>


        <TextView
            android:id="@+id/tv_terms6"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termsconditions_adverts"/>


        <TextView
            android:id="@+id/tv_terms7"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termsconditions_termination"/>


        <TextView
            android:id="@+id/tv_terms8"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termsconditions_change"/>

        <TextView
            android:id="@+id/tv_terms9"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termsconditions_support"/>

        <TextView
            android:id="@+id/tv_terms10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="right"
            android:text="@string/lastupdated"/>

    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>