<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lit.litmoments.PrivacyActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <include
            android:id="@+id/entrytoolbar"
            layout="@layout/privacytoolbar" />


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_below="@id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_content"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"/>

        <TextView
            android:id="@+id/textView_content2"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pripolicy_content"/>

        <TextView
            android:id="@+id/textView_content3"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_collection"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/textView_content4"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_content"/>


        <TextView
            android:id="@+id/textView_content5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/analytics"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_content6"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analytics_content"/>


        <TextView
            android:id="@+id/textView_content7"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_policy"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/textView_content8"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_policycontent"/>


        <TextView
            android:id="@+id/textView_content9"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reach_out"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/textView_content10"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reachout_content"/>

        <TextView
            android:id="@+id/textView_content11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="right"
            android:text="@string/lastupdated"/>


    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>