<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ic_photosize"
        android:icon="@drawable/display_image_icon"
        android:title="@string/group_title"
        android:orderInCategory="60"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="80"
        android:title="@string/edit_journal"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_edit_white"
        />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="90"
        android:title="@string/delete_journal"
        app:showAsAction="never"
        android:icon="@drawable/ic_delete"/>
</menu>