<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddJournalEntry"
    android:background="@color/background">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">
        <include
            android:id="@+id/entrytoolbar"
            layout="@layout/entrytoolbar" />


    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_container">

        <TextView
            android:id="@+id/tvJournalDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/journalDate"
            android:textColorHint="@color/colorAccent" />

        <RelativeLayout
            android:id="@+id/rlContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvJournalDate"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/ivJournalLocation"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/journalLocation"
                android:src="@drawable/ic_location" />

            <EditText
                android:id="@+id/etJournalLocation"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/ivJournalLocation"
                android:hint="@string/journalLocation"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <ImageView
                android:id="@+id/ivJournalWeather"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_below="@id/ivJournalLocation"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/journalWeather"
                android:src="@drawable/ic_weather" />

            <EditText
                android:id="@+id/etJournalWeather"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/etJournalLocation"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/ivJournalWeather"
                android:hint="@string/journalWeather"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <ImageView
                android:id="@+id/ivJournalMood"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@id/ivJournalWeather"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/journalMood"
                android:src="@drawable/ic_mood" />

            <EditText
                android:id="@+id/etJournalMood"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivJournalWeather"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/ivJournalMood"
                android:hint="@string/journalMood"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <EditText
                android:id="@+id/etJournalTitle"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivJournalMood"
                android:layout_marginTop="40dp"
                android:background="@drawable/etborders"
                android:hint="@string/journalTitle"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <EditText
                android:id="@+id/etJournalMessage"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/etJournalTitle"
                android:layout_marginTop="10dp"
                android:background="@drawable/etborders"
                android:gravity="top"
                android:hint="@string/journalMessage"
                android:lines="4"
                android:maxLines="5"
                android:singleLine="false"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/rlContent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvPhotos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical">

            </android.support.v7.widget.RecyclerView>

        </RelativeLayout>


    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/photojournal_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/save_journal_entry"
        android:elevation="@dimen/fab_elevation"
        android:src="@drawable/ic_photo"
        app:backgroundTint="@color/photofab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.85" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/savejournal_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/save_journal_entry"
        android:elevation="@dimen/fab_elevation"
        android:src="@drawable/ic_save"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.98" />



</android.support.constraint.ConstraintLayout>